--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ matrix:
     allow_failures:
         - php: hhvm
 
-script: vendor/bin/tester tests -s -c
+script: ./vendor/bin/tester -s ./tests
 
 after_failure:
     # Print *.actual content
-    - for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
+    - 'for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done'
 
 before_script:
-    # Install Nette Tester
+    # Update Composer
+    - composer self-update
+    # Install Nette Tester etc..
     - composer install --no-interaction --dev --prefer-source
