--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
-tests export-ignore
+composer.lock export-ignore
+tests/ export-ignore
+*.md export-ignore
