--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "f3l1x/thumbator",
+    "name": "minetro/thumbator",
     "type": "library",
     "description": "Easy-use util for resizing images on website.",
     "license": "GNU",
-    "homepage": "https://github.com/f3l1x/Thumbator",
+    "homepage": "https://github.com/minetro/thumbator",
     "authors": [
         {
             "name": "Milan Felix Sulc",
-            "homepage": "http://www.milansulc.cz"
+            "homepage": "http://jfx.cz"
         }
     ],
     "require": {
@@ -17,7 +17,7 @@
         "ext-gd": "*"
     },
     "require-dev": {
-        "nette/tester": "1.*"
+        "nette/tester": "1.3.*"
     },
     "autoload": {
         "classmap": ["src/"]
