--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "minetro/thumbator",
-    "type": "library",
     "description": "Easy-use util for resizing images on website.",
-    "license": "GNU",
+    "type": "library",
+    "license": ["BSD-3-Clause"],
     "homepage": "https://github.com/minetro/thumbator",
     "authors": [
         {
@@ -12,12 +12,12 @@
     ],
     "require": {
         "php": ">= 5.4",
-        "nette/utils": "2.2.*",
-        "nette/http": "2.2.*",
+        "nette/utils": ">=2.2.0,<2.4.0",
+        "nette/http": ">=2.2.0,<2.4.0",
         "ext-gd": "*"
     },
     "require-dev": {
-        "nette/tester": "1.3.*"
+        "nette/tester": "~1.3.0"
     },
     "autoload": {
         "classmap": ["src/"]
