--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         }
     ],
     "require": {
-        "php": ">= 5.4",
+        "php": ">= 5.6 < 7.2",
         "nette/utils": ">=2.2.0,<2.4.0",
         "nette/http": ">=2.2.0,<2.4.0",
         "ext-gd": "*"
     },
     "require-dev": {
-        "nette/tester": "~1.7.2"
+        "nette/tester": "~2.0.2"
     },
     "autoload": {
         "classmap": ["src/"]
